--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-아카데미에 오신 것을 환영합니다.
+<p align="center">
+  
+<h1>아카데미에 오신 것을 환영합니다.</h1>
+<img src="http://catory.kr/files/attach/images/138/009/007/1aa6aaff9f7e241f17a09f077d631206.jpg">
+
+
+</p>
