--- a/index.html
+++ b/index.html
@@ -2,12 +2,117 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>아카데미</title>
+  <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
 </head>
 <body>
+<br>
 
-<h1>아카데미에 오신 것을 환영합니다.</h1>
-<img src="http://catory.kr/files/attach/images/138/009/007/1aa6aaff9f7e241f17a09f077d631206.jpg">
+<div class="row">
+  <div class="column large-4 small-12 text-center">
+    <a href="index.html"><img src="https://placehold.it/400x80" alt=""></a>
+  </div>  
+  <div class="column large-8 small-12">
+    <ul class="menu float-right">
+      <li><a href="notice.html"><img src="https://placehold.it/100x50"></a></li>
+      <li><a href="event.html"><img src="https://placehold.it/100x50"></a></li>
+      <li><a href="board.html"><img src="https://placehold.it/100x50"></a></li>
+      <li><a href="profile.html"><img src="https://placehold.it/100x50"></a></li>
+    </ul>
+  </div>
+</div>
+<br>
+
+<div class="row">
+  <img src="https://placehold.it/1200x400" alt="">
+</div>
+<br>
+
+<div class="row text-center">
+    <h1><img src="https://placehold.it/500x60" alt=""></h1>
+</div>
+<br>
+<div class="row small-up-2 large-up-6">
+  <div class="column">
+    <img class="thumbnail" src="img/sahrj.png" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>
+  <div class="column">
+      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+  </div>  
+</div>
+<hr>
+
+<div class="row text-center">
+created by @1028in
+</div>
+<br>
 
 </body>
 </html>
