--- a/notice.html
+++ b/notice.html
@@ -1,20 +1,3 @@
-Skip to content
- 
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- @nuri9771 Sign out
-0
-0 0 nuri9771/uhm
- Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
-uhm/index.html
-fa6c1de  3 hours ago
-@nuri9771 nuri9771 1
-     
-118 lines (113 sloc)  3.58 KB
 <!doctype html>
 <html>
 <head>
@@ -50,5 +33,10 @@ fa6c1de  3 hours ago
   <iframe src="http://54.180.135.144/bbs/board.php?bo_table=notice" width="100%" height="800"></iframe>
 </div>
 
-</body>
+<div class="row text-center">
+created by @1028in
+</div>
+<br>
+
+ </body>
 </html>
