--- a/notice.html
+++ b/notice.html
@@ -30,7 +30,7 @@
 <br>
 
 <div class="row">
-  <iframe src="http://54.180.135.144/bbs/board.php?bo_table=notice" width="100%" height="800"></iframe>
+  <iframe src="https://54.180.135.144/bbs/board.php?bo_table=notice" width="100%" height="800"></iframe>
 </div>
 
 <div class="row text-center">
