--- a/notice.html
+++ b/notice.html
@@ -30,7 +30,7 @@
 <br>
 
 <div class="row">
-  <iframe src="https://54.180.135.144/bbs/board.php?bo_table=notice" width="100%" height="1000" border="0"></iframe>
+  <iframe src="https://54.180.135.144/bbs/board.php?bo_table=notice" width="100%" height="1000" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div class="row text-center">
