--- a/index.html
+++ b/index.html
@@ -35,76 +35,76 @@
 <br>
 <div class="row small-up-2 large-up-6">
   <div class="column">
-    <img class="thumbnail" src="img/sahrj.png" alt="">
+    <img class="thumbnail" src="img/1.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/2.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/3.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/4.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/5.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/6.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/7.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/11.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/22.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/33.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/44.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/55.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/66.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/77.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/111.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/222.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/333.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/444.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/555.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/666.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/777.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/888.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/99.png" alt="">
   </div>
   <div class="column">
-      <img class="thumbnail" src="https://placehold.it/200x200" alt="">
+      <img class="thumbnail" src="img/999.png" alt="">
   </div>  
 </div>
 <hr>
