--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>아카데미</title>
   <link rel="stylesheet" href="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 <br>
@@ -14,11 +15,11 @@
     <a href="index.html"><img src="https://placehold.it/400x80" alt=""></a>
   </div>  
   <div class="column large-8 small-12">
-    <ul class="menu float-right">
-      <li><a href="notice.html"><img src="https://placehold.it/100x50"></a></li>
-      <li><a href="event.html"><img src="https://placehold.it/100x50"></a></li>
-      <li><a href="board.html"><img src="https://placehold.it/100x50"></a></li>
-      <li><a href="profile.html"><img src="https://placehold.it/100x50"></a></li>
+    <ul class="menu float-right gnb">
+      <li><a href="free.html">익명게시판</a></li>
+      <li><a href="notice.html">공지사항</a></li>
+      <li><a href="profile.html">프로필</a></li>
+      <li><a href="event.html">이벤트</a></li>
     </ul>
   </div>
 </div>
