--- a/event.html
+++ b/event.html
@@ -31,7 +31,7 @@
 <br>
 
 <div class="row">
-  <iframe src="https://uhm.ze.to/bbs/board.php?bo_table=notice" width="100%" height="1000" frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://uhm.ze.to/bbs/board.php?bo_table=event" width="100%" height="1000" frameborder="0" scrolling="no"></iframe>
 </div>
 
 <div class="row text-center">
