--- a/notice.html
+++ b/notice.html
@@ -12,14 +12,13 @@
 
 <div class="row">
   <div class="column large-4 small-12 text-center">
-    <a href="index.html"><img src="https://placehold.it/400x80" alt=""></a>
+    <a href="index.html"><img src="img/logo.png" alt=""></a>
   </div>  
   <div class="column large-8 small-12">
     <ul class="menu float-right gnb">
       <li><a href="free.html">익명게시판</a></li>
       <li><a href="notice.html">공지사항</a></li>
       <li><a href="profile.html">프로필</a></li>
-      <li><a href="event.html">이벤트</a></li>
     </ul>
   </div>
 </div>
